cc-anbu-central/prometheus/gw-prometheus.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: prometheus-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - prometheus.anbutech.xyz
    port:
      name: http
      number: 9090
      protocol: HTTP
